<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.fitstep.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.fitstep.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_set_goal"
        android:name="com.example.fitstep.ui.setgoal.SetGoalFragment"
        android:label="@string/menu_set_goal"
        tools:layout="@layout/fragment_set_goal" />
    <fragment
        android:id="@+id/nav_activity"
        android:name="com.example.fitstep.ui.activity.ActivityFragment"
        android:label="Activity Management"
        tools:layout="@layout/fragment_activity" >

    </fragment>
    <fragment
        android:id="@+id/nav_bmi"
        android:name="com.example.fitstep.ui.bmi.bmiFragment"
        android:label="BMI"
        tools:layout="@layout/fragment_bmi" >

    </fragment>
    <fragment
        android:id="@+id/nav_recipe"
        android:name="com.example.fitstep.ui.recipe.RecipeFragment"
        android:label="BMI"
        tools:layout="@layout/fragment_bmi" >

    </fragment>
<!--    <fragment-->
<!--        android:id="@+id/nav_graphic_activity"-->
<!--        android:name="com.example.fitstep.ui.activity.ActivityGraphicFragment"-->
<!--        android:label="Activities graphical statistics"-->
<!--        tools:layout="@layout/fragment_activity_graphic" >-->
<!--    </fragment>-->
</navigation>